# LE_Scanning

./: .gitignore  MANIFEST.in  README.md  Taskfile.yml  pyproject.toml  setup.py
LE_scanning/: STLGenerator.py  __init__.py
LE_scanning/static/js/: scanning.js
LE_scanning/templates/: scanning_tab.jinja2
extras/: README.txt  scanning.md
extras/github/: bug_report.yml  feature_request.yml
translations/: README.txt
